dfir_rs/tests/snapshots/surface_codegen__transitive_closure@graphvis_dot.snap
---
source: dfir_rs/tests/surface_codegen.rs
expression: df.meta_graph().unwrap().to_dot(cfg)
---
digraph {
    node [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace", style=filled];
    edge [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace"];
    n1v1 [label="(n1v1) union()", shape=invhouse, fillcolor="#88aaff"]
    n2v1 [label="(n2v1) tee()", shape=house, fillcolor="#ffff88"]
    n3v1 [label="(n3v1) tee()", shape=house, fillcolor="#ffff88"]
    n4v1 [label="(n4v1) source_stream(pairs_recv)", shape=invhouse, fillcolor="#88aaff"]
    n5v1 [label="(n5v1) join::<'static>()", shape=invhouse, fillcolor="#88aaff"]
    n6v1 [label="(n6v1) unique::<'static>()", shape=invhouse, fillcolor="#88aaff"]
    n7v1 [label="(n7v1) map(|(a, k)| (k, a))", shape=invhouse, fillcolor="#88aaff"]
    n8v1 [label="(n8v1) map(|(_k, (a, b))| (a, b))", shape=invhouse, fillcolor="#88aaff"]
    n9v1 [label="(n9v1) defer_tick_lazy()", shape=invhouse, fillcolor="#88aaff"]
    n10v1 [label="(n10v1) for_each(|(a, b)| out_send.send((a, b)).unwrap())", shape=house, fillcolor="#ffff88"]
    n11v1 [label="(n11v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n12v1 [label="(n12v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n13v1 [label="(n13v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n14v1 [label="(n14v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n15v1 [label="(n15v1) identity()", shape=invhouse, fillcolor="#88aaff"]
    n16v1 [label="(n16v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n1v1 -> n2v1
    n4v1 -> n3v1
    n3v1 -> n11v1 [label="0"]
    n5v1 -> n6v1
    n7v1 -> n5v1 [label="0"]
    n2v1 -> n12v1 [label="0"]
    n3v1 -> n13v1 [label="1"]
    n9v1 -> n1v1 [label="1"]
    n8v1 -> n14v1
    n6v1 -> n8v1
    n2v1 -> n10v1 [label="1"]
    n11v1 -> n1v1 [label="0"]
    n12v1 -> n7v1
    n13v1 -> n5v1 [label="1"]
    n14v1 -> n15v1
    n15v1 -> n16v1
    n16v1 -> n9v1 [color=red]
    subgraph sg_1v1 {
        cluster=true
        fillcolor="#dddddd"
        style=filled
        label = "sg_1v1\nstratum 0"
        n4v1
        subgraph sg_1v1_var_link_tee {
            cluster=true
            label="var link_tee"
            n3v1
        }
    }
    subgraph sg_2v1 {
        cluster=true
        fillcolor="#dddddd"
        style=filled
        label = "sg_2v1\nstratum 0"
        n7v1
        n8v1
        subgraph sg_2v1_var_the_join {
            cluster=true
            label="var the_join"
            n5v1
            n6v1
        }
    }
    subgraph sg_3v1 {
        cluster=true
        fillcolor="#dddddd"
        style=filled
        label = "sg_3v1\nstratum 0"
        n9v1
        n10v1
        subgraph sg_3v1_var_edge_union_tee {
            cluster=true
            label="var edge_union_tee"
            n1v1
            n2v1
        }
    }
    subgraph sg_4v1 {
        cluster=true
        fillcolor="#dddddd"
        style=filled
        label = "sg_4v1\nstratum 1"
        n15v1
    }
}
